--- a/menu/planner/templates/favorite_recipes.html
+++ b/menu/planner/templates/favorite_recipes.html
@@ -52,10 +52,10 @@
 
 
                 <label for='ingredients'>Ingredients:</label>
-                <textarea type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil'></textarea>
+                <textarea type='text' id='ingredients' name='ingredients' placeholder='Ex:1 tbsp Olive Oil' cols="30" rows="5"></textarea>
 
                 <label for='directions'>Directions:</label>
-                <textarea type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400'></textarea>
+                <textarea type='text' id='directions' name='directions' placeholder='Ex:Preheat oven to 400' cols="30" rows="10"></textarea>
 
                 <input type='submit' value = "Add Recipe">
             </form>
