--- a/menu/planner/templates/create_menu.html
+++ b/menu/planner/templates/create_menu.html
@@ -44,14 +44,15 @@
 
                 <label for="mon">Monday:</label>
                 <select id="mon" name="mon">
-                    {% for recipe in all_recipes %}
                     <option></option>
+                    {% for recipe in all_recipes %}
                     <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
                 </select>
 
                 <label for="tues">Tuesday:</label>
                 <select id="tues" name="tues">
+                    <option></option>
                     {% for recipe in all_recipes %}
                     <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
@@ -59,6 +60,7 @@
 
                 <label for="wed">Wednesday:</label>
                 <select id="wed" name="wed">
+                    <option></option>
                     {% for recipe in all_recipes %}
                     <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
@@ -66,6 +68,7 @@
 
                 <label for="thurs">Thursday:</label>
                 <select id="thurs" name="thurs">
+                    <option></option>
                     {% for recipe in all_recipes %}
                     <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
@@ -73,6 +76,7 @@
 
                 <label for="fri">Friday:</label>
                 <select id="fri" name="fri">
+                    <option></option>
                     {% for recipe in all_recipes %}
                     <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
@@ -80,6 +84,7 @@
 
                 <label for="sat">Saturday:</label>
                 <select id="sat" name="sat">
+                    <option></option>
                     {% for recipe in all_recipes %}
                     <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
@@ -87,6 +92,7 @@
 
                 <label for="sun">Sunday:</label>
                 <select id="sun" name="sun">
+                    <option></option>
                     {% for recipe in all_recipes %}
                     <option value={{recipe.id}}>{{recipe.title}}</option>
                     {% endfor %}
