--- a/menu/planner/templates/grocery_list.html
+++ b/menu/planner/templates/grocery_list.html
@@ -51,7 +51,16 @@
                 </table>     
             </div>
 
-        <div class="add_food">
+            <!-- error messages will appear here (functioning)-->
+            {% if messages %}
+            <ul class='messages'>
+                {% for message in messages %}
+                    <li {% if messages.tags %} class="{{message.tags}}" {% endif %}>{{message}}</li>
+                {% endfor %}    
+            </ul>
+            {% endif %}
+            
+            <div class="add_food">
             <h3>Add a Food</h3>
             <form class="create_food" action="/planner/create_food" method="POST">
                 {% csrf_token %}
