--- a/menu/planner/templates/create_menu.html
+++ b/menu/planner/templates/create_menu.html
@@ -100,6 +100,45 @@
                 <input type="submit" value="Add Menu">
                 </select>
             </form>
+
+            <h2>View Previous Menus</h2>
+            
+            <form action="/planner/previous_menu" method="POST">
+                {% csrf_token %}
+                <label for="view_menu">Week of:</label>
+                <select id="view_menu" name="view_menu">
+                    <option> </option>
+                    {% for menu in user.menus.all %}
+                    <option value={{menu.id}}>{{menu.week_date}}</option>
+                    {% endfor %}
+                </select>
+                <input type="submit" value="View">
+            </form>
+    
+            <div class="week">
+            <!-- this will display the week a looks view with the menu the user has select-->
+                <h4>Week of: {{current_menu.week_date}}</h4>
+                <table> 
+                    <thead>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                        <th>Sunday</th>
+                    </thead>
+                    <tbody>
+                        <td><a href = '/planner/recipe_info/{{current_menu.mon.id}}'>{{current_menu.mon.title}}</a></td>
+                        <td><a href = '/planner/recipe_info/{{current_menu.tues.id}}'>{{current_menu.tues.title}}</a></td>
+                        <td><a href = '/planner/recipe_info/{{current_menu.wed.id}}'>{{current_menu.wed.title}}</a></td>
+                        <td><a href = '/planner/recipe_info/{{current_menu.thrus.id}}'>{{current_menu.thrus.title}}</a></td>
+                        <td><a href = '/planner/recipe_info/{{current_menu.fri.id}}'>{{current_menu.fri.title}}</a></td>
+                        <td><a href = '/planner/recipe_info/{{current_menu.sat.id}}'>{{current_menu.sat.title}}</a></td>
+                        <td><a href = '/planner/recipe_info/{{current_menu.sun.id}}'>{{current_menu.sun.title}}</a></td>
+                    </tbody>
+                </table>     
+            </div>
         </div>
     </div>
 
