--- a/menu/planner/templates/create_menu.html
+++ b/menu/planner/templates/create_menu.html
@@ -34,6 +34,15 @@
             <img src="{% static 'media/gnocchi.png' %}" alt="Creamy Gnocchi Soup">
         </div>
 
+        <!-- error messages will appear here-->
+        {% if messages %}
+        <ul class='messages'>
+            {% for message in messages %}
+                <li {% if messages.tags %} class="{{message.tags}}" {% endif %}>{{message}}</li>
+            {% endfor %}    
+        </ul>
+        {% endif %}
+
         <div class="menu">
             <h2>Create a Menu For The Week</h2>
             <form action="/planner/add_menu/{{user.id}}" method="POST">
