--- a/menu/planner/templates/selected_menu.html
+++ b/menu/planner/templates/selected_menu.html
@@ -46,6 +46,7 @@
         <div class="week">
         <!-- this will display the week a looks view with the menu the user has select-->
             <h4>Week of: {{current_menu.week_date}}</h4>
+            <button onclick='location.href="/planner/delete_menu/{{current_menu.id}}"'>Delete</button>
             <table> 
                 <thead>
                     <th>Monday</th>
