error messages working properly and able to register successfully with city and state

--- a/menu/login/templates/edit_account.html
+++ b/menu/login/templates/edit_account.html
@@ -50,6 +50,12 @@
                 <label for='new_last_name'>Last Name:</label>
                 <input type='text' id='new_last_name' name='new_last_name' placeholder='{{user.last_name}}'>
 
+                <label for='new_city'>City:</label>
+                <input type='text' id='new_city' name='new_city' placeholder='{{user.city}}'>
+
+                <label for='new_state'>State:</label>
+                <input type='text' id='new_state' name='new_state' placeholder='{{user.state}}'>
+
                 <label for='new_email'>Email:</label>
                 <input type='email' id='new_email' name='new_email' placeholder='{{user.email}}'>
 
