--- a/menu/login/templates/register.html
+++ b/menu/login/templates/register.html
@@ -32,6 +32,12 @@
         
                 <label for='last_name'>Last Name:</label>
                 <input type='text' id='last_name' name='last_name'>
+
+                <label for='city'>City:</label>
+                <input type='text' id='city' name='city'>
+
+                <label for='state'>State:</label>
+                <input type='text' id='state' name='state'>
         
                 <label for='email'>Email:</label>
                 <input type='email' id='email' name='email'>
