--- a/menu/login/templates/edit_account.html
+++ b/menu/login/templates/edit_account.html
@@ -61,6 +61,8 @@
 
                 <input type='submit' value = "Update">
             </form>
+
+            <p>{{user.city}}</p>
         </div>
     </div>
 </body>
