--- a/menu/login/static/css/register.css
+++ b/menu/login/static/css/register.css
@@ -41,7 +41,6 @@ img{
 
 h1{
     font-size: 50px;
-    /* text-align: center; */
 }
 
 .title{
@@ -58,7 +57,9 @@ h1{
 }
 
 form{
-    padding:20px
+    padding:20px;
+    width: 196px;
+    margin-left: 26%;
 }
 
 input{
@@ -67,5 +68,6 @@ input{
 }
 
 button{
-    margin-left: 45%;
+    margin-left: 47%;
+    margin-top: 10px;
 }
