--- a/menu/login/static/css/login.css
+++ b/menu/login/static/css/login.css
@@ -49,7 +49,7 @@ button,form{
     padding: 5px 20px;
     text-align: center;
     border-radius: 4px;
-    margin-left: 45px;
+    margin-left: 47px;
 }
 
 .messages{
@@ -75,4 +75,8 @@ h1{
 h3{
     text-align: center;
     font-size: 20px;
+}
+
+form{
+    width: 200px;
 }
