--- a/menu/login/static/css/edit.css
+++ b/menu/login/static/css/edit.css
@@ -57,8 +57,7 @@ form{
     padding: 5px 20px;
     text-align: center;
     border-radius: 4px;
-    height: 140px;
-    width: 255px;
+    width: 198px;
     margin-left: 41%;
     margin-top: 20px;
     margin-bottom: 30px;
@@ -67,4 +66,11 @@ form{
 input{
     padding: 5px;
     margin: 5px;
+}
+
+.messages{
+    color:rgb(185, 58, 58);
+    text-align: center;
+    margin-bottom: 10px;
+    
 }
