--- a/menu/planner/static/css/create_menu.css
+++ b/menu/planner/static/css/create_menu.css
@@ -18,7 +18,7 @@ form{
     padding: 20px;
     text-align: center;
     border-radius: 4px;
-    height: 415px;
+    height: auto;
     width: 185px;
     margin-left: 41%;
     margin-top: 20px;
@@ -73,4 +73,21 @@ table, th, td {
     margin: 10px;
     margin-left: 23%;
     margin-right: 23%;
+}
+
+.messages{
+    color:rgb(185, 58, 58);
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+h4{
+    text-align: center;
+}
+
+.view{
+    width: 250px;
+    padding:15px;
+    margin-left: 39%;
+
 }
