--- a/menu/planner/static/css/home.css
+++ b/menu/planner/static/css/home.css
@@ -91,3 +91,16 @@ h4{
 .delete{
     margin-left: 49%;
 }
+
+form{
+    color: whitesmoke;
+    background-color:rgb(64, 93, 119);
+    padding: 15px;
+    text-align: center;
+    border-radius: 4px;
+    height: auto;
+    width: 216px;
+    margin-left: 41%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
