home page updated

--- a/menu/planner/templates/home_page.html
+++ b/menu/planner/templates/home_page.html
@@ -33,6 +33,7 @@
 
         <form action="/planner/view_menu" method="POST">
             {% csrf_token %}
+            <label for="view_menu">Week of:</label>
             <select id="view_menu" name="view_menu">
                 <option> </option>
                 {% for menu in user.menus.all %}
