--- a/menu/planner/static/css/grocery_list.css
+++ b/menu/planner/static/css/grocery_list.css
@@ -31,17 +31,13 @@ a{
     margin-top: 10px;
 }
 
-h3{
+h2{
     display: inline;
     margin-right: 75%;
 }
 
 .recipe_nav{
     margin-left: 33%;
-}
-
-h4{
-    text-decoration: underline;
 }
 
 table, th, td {
@@ -51,4 +47,43 @@ table, th, td {
     margin: 10px;
     margin-left: 23%;
     margin-right: 23%;
+}
+
+.messages{
+    color:rgb(185, 58, 58);
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.view, .create_food{
+    color: whitesmoke;
+    background-color:rgb(64, 93, 119);
+    padding: 15px;
+    text-align: center;
+    border-radius: 4px;
+    height: auto;
+    width: 216px;
+    margin-left: 37%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+.title{
+    margin-left: 42%;
+    text-decoration: underline;
+}
+
+.list{
+    text-align: center;
+}
+
+.food{
+    border-style: solid;
+    text-align: center;
+    margin: 20px;
+    height: auto;
+    width: 500px;
+    padding: 15px;
+    background-color:rgba(64, 93, 119, 0.315);
+    margin-left: 28%;
 }
