--- a/menu/login/templates/reg_login.html
+++ b/menu/login/templates/reg_login.html
@@ -46,7 +46,7 @@
         </ul>
         {% endif %}
             
-        <!-- for new users to register -->
+        <!-- button for new users to register -->
         <div class="register">
             <h2>New to Menu Maker?</h2>
             <button onclick='location.href="/registration"'>Register Here!</button>
