--- a/menu/login/templates/register.html
+++ b/menu/login/templates/register.html
@@ -16,7 +16,7 @@
             <p>To Join Register Below</p>
         </div>
 
-        <!-- take user back to login page -->
+        <!-- button to take user back to login page -->
         <button onclick='location.href="/"'>Back</button>
 
         <div class="images">
