--- a/menu/planner/templates/all_recipes.html
+++ b/menu/planner/templates/all_recipes.html
@@ -66,7 +66,7 @@
         <div class="recipe">
             <h4>{{recipe.title}}</h4>
             <button class="like" onclick='location.href="/planner/add_favorite/{{recipe.id}}"'>Like</button>
-            <!-- <button class="edit" onclick='location.href="/planner/update_recipe/{{recipe.id}}"'>EDIT</button> -->
+            <!-- <button class="edit" onclick='location.href="/planner/edit_recipe/{{recipe.id}}"'>EDIT</button> -->
 
             <p>{{recipe.description}}</p>
             <!-- Link to view recipe (functioning) -->
